fix(shiny-preset): Update dark mode shadows on value boxes (#801)

--- a/inst/builtin/bs5/shiny/_rules.scss
+++ b/inst/builtin/bs5/shiny/_rules.scss
@@ -42,12 +42,18 @@ $bslib-checkbox-radio-margin-right: 0.35em !default;
       @include button-outline-variant($dark-text-emphasis-dark);
     }
   }
+
+  @include color-mode(dark) {
+    .bslib-value-box {
+      --bslib-value-box-shadow: #{$box-shadow-dark};
+    }
+  }
 }
 
 // By default, non-active .nav links reflect the primary color. This styling
-// tweak brings them closer to how they'll appear in a navbar. 
+// tweak brings them closer to how they'll appear in a navbar.
 .nav-underline {
-  --bs-link-color: rgba(var(--bs-body-color-rgb), 0.65); 
+  --bs-link-color: rgba(var(--bs-body-color-rgb), 0.65);
   --bs-link-hover-color: rgba(var(--bs-body-color-rgb), 0.8);
 }
 
